change ierarchy files of ReposList, add entities alias, add memo for stupid components

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -20,6 +20,9 @@
       "@styles/*": [
         "src/styles/*"
       ],
+      "@entities/*": [
+        "src/entities/*"
+      ],
       "@vars/*": [
         "src/vars/*"
       ],
