--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.1",
     "html-react-parser": "^3.0.9",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
