add webpack and loaders

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,36 +1,33 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src/",
     "paths": {
       "@components/*": [
-        "src/components/*"
+        "components/*"
       ],
       "@config/*": [
-        "src/config/*"
+        "config/*"
       ],
       "@global/*": [
-        "src/global/*"
+        "global/*"
       ],
       "@mixins/*": [
-        "src/mixins/*"
+        "mixins/*"
       ],
       "@pages/*": [
-        "src/pages/*"
+        "pages/*"
       ],
       "@store/*": [
-        "src/store/*"
+        "store/*"
       ],
       "@styles/*": [
-        "src/styles/*"
+        "styles/*"
       ],
       "@entities/*": [
-        "src/entities/*"
-      ],
-      "@vars/*": [
-        "src/vars/*"
+        "entities/*"
       ],
       "@utils/*": [
-        "src/utils/*"
+        "utils/*"
       ]
     }
   }
