--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "@octokit/core": "^4.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "classnames": "^2.3.1",
     "html-react-parser": "^3.0.9",
@@ -19,12 +22,13 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
+    "regenerator-runtime": "^0.13.11",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "cross-env NODE_ENV=development npx webpack serve --mode=development",
+    "build": "NODE_ENV=production npx webpack --mode=production",
     "eject": "react-app-rewired eject",
     "storybook": "start-storybook -p 6007 -s public",
     "build-storybook": "build-storybook -s public",
@@ -56,19 +60,14 @@
   "prettier": {
     "singleQuote": true
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    "ie 11"
+  ],
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
@@ -83,21 +82,35 @@
     "@types/jest-image-snapshot": "^6.1.0",
     "@types/js-yaml": "^4.0.5",
     "@types/serve-handler": "^6.1.1",
+    "@types/webpack-env": "^1.18.0",
+    "autoprefixer": "^10.4.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "babel-preset-mobx": "^2.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.1",
     "jest-dev-server": "6.2.0",
     "jest-environment-jsdom": "^29.4.1",
     "jest-image-snapshot": "^6.1.0",
+    "mini-css-extract-plugin": "^2.7.3",
+    "postcss-loader": "^7.0.2",
     "prettier": "^2.8.4",
     "prop-types": "^15.8.1",
     "puppeteer": "^19.6.2",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
+    "react-refresh": "^0.14.0",
     "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "serve-handler": "6.1.5",
-    "webpack": "^5.74.0"
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "resolutions": {
     "jest": "29.4.1",
