fix problems from latest review, add context for rootStore

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -26,6 +26,9 @@
       "@entities/*": [
         "entities/*"
       ],
+      "@hooks/*": [
+        "hooks/*"
+      ],
       "@utils/*": [
         "utils/*"
       ]
